# RealTimeSystem

./: .gitignore  backup  main
client/: .gitignore  package-lock.json  package.json
client/public/: index.html
client/src/: App.js  Vehicle3D.js  styles.css
server/: CMakeLists.txt  server.py
server/cmake/Modules/: FindMicrohttpd.cmake  FindSQLite3.cmake  Findjson-c.cmake
server/scripts/: setup_gps.sh
server/src/: condition_handler_thread.c  device_check_thread.c  gps.c  gps_data.db  gps_satellites.c  gps_thread.c  http_server_thread.c  main.c  network_communication_thread.c  periodic_task_thread.c  server.c  utils.c
server/src/gps/: gps.c  gps.h
server/src/include/: condition_handler_thread.h  device_check_thread.h  gps.h  gps_satellites.h  gps_thread.h  http_server_thread.h  mpu9250_types.h  network_communication_thread.h  nmea_types.h  periodic_task_thread.h  shared_data_types.h  threads.h  utils.h
server/src/utils/: utils.c  utils.h
